_sass/_helpers.scss
@mixin bp($size) {
  @media screen and (min-width: $size) {
    @content;
  }
}

@mixin bp-max($size) {
  @media screen and (max-width: $size) {
    @content;
  }
}

%unlist {
  margin: 0;
  padding: 0;
  list-style: none;
}

%u-wrap {
  max-width: $content-max-width;
  margin: 0 auto;
  padding: 0 1rem;
}

// Force word wrapping - useful for long URLs
// https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/

// stylelint-disable plugin/no-unsupported-browser-features
%u-word-wrap {
  word-wrap: break-word;
  -ms-word-break: break-all;
  word-break: break-word;
  overflow-wrap: break-word;
  -ms-hyphens: auto; // stylelint-disable-line property-no-vendor-prefix
  -moz-hyphens: auto; // stylelint-disable-line property-no-vendor-prefix
  -webkit-hyphens: auto; // stylelint-disable-line property-no-vendor-prefix
  hyphens: auto;
}
// stylelint-enable plugin/no-unsupported-browser-features

// visually hide - still available to screen readers
// https://www.scottohara.me/blog/2017/04/14/inclusively-hidden.html

// stylelint-disable plugin/no-unsupported-browser-features
%u-visually-hidden:not(:focus):not(:active),
%u-visually-hidden--hide-focus {
  position: absolute;
  width: 0.1rem;
  height: 0.1rem;
  margin: -0.1rem;
  padding: 0;
  overflow: hidden;
  white-space: nowrap;
  border: 0;
  clip: rect(0 0 0 0);
  clip-path: inset(100%);
}
// stylelint-enable plugin/no-unsupported-browser-features

@mixin focus {
  color: var(--color-text-body);
  text-decoration: none;
  background-color: var(--color-highlight);
  outline: $border-thick solid transparent;
  outline-offset: 0;
}

@mixin focus-with-shadow {
  @include focus;

  box-shadow: 0 -0.125rem var(--color-highlight),
    0 0.25rem var(--color-text-body);
}

